--- a/操作系统.md
+++ b/操作系统.md
@@ -18,6 +18,10 @@
 - epoll效率远高于select（尤其是FD数量很大时），因为select需要轮询所有FD的状态，epoll则是等待每个FD上面的callback函数回调；
 - epoll通过内核用户空间mmap同一块内存来实现，避免了不必要的内存复制；
 
+### 使用场景
+
+在并发量低且Socket都比较活跃的场景下用select，高并发场景，需要接入大量客户端，用epoll；
+
 ### 参考
 
 - https://www.cnblogs.com/aspirant/p/9166944.html
@@ -76,4 +80,31 @@ https://blog.csdn.net/fadbgfnbxb/article/details/90048851
 
 ## 进程的调度
 
-https://zhuanlan.zhihu.com/p/282017286
+### 进程调度与线程调度
+
+https://www.cnblogs.com/HuiH/p/11918006.html
+
+#### 进程调度算法
+
+**优先调度算法**
+
+- 先来先服务（FCFS）：每次调度都是从后备作业队列中选择一个或多个最先进入该队列的作业，将它们调入内存，为它们分配资源、创建进程，然后放入就绪队列；
+- 短作业优先（SJF）：从后备队列中选择一个或多个估计运行时间最短的作业，将它们调入内存运行；
+
+**高优先权优先调度算法**
+
+- 非抢占式优先权算法：系统一旦把资源分配给就绪队列中最高优先级的进程后，该进程就一直执行下去，直到执行结束；
+- 抢占式优先权算法：系统同样是把资源分配给当前最高优先级的进程，该进程执行过程中如果有其他更高优先级的进程加入，则当前进程中止，资源被分配到更高优先级的进程；
+- 高响应比优先算法：响应比 = （等待时间 + 要求服务时间）/要求服务时间；
+
+**基于时间片的轮转调度算法**
+
+- 时间片轮转法：将所有就绪进程按先来先服务排成队列，每次调用时把CPU分配给首进程，令其执行一个时间片，时间片用完时，中断该进程，将其送往就绪队列末尾；
+- 多级反馈队列调度算法：设置多个不同优先级的就绪队列，优先级依次降低，每个队列的时间片也不同，越高优先级的队列时间片越小。一个新进程加入时，先放入第一队列末尾，按FCFS排队，如果能在时间片内完成，则撤离系统，否则将其加入到第二队列（依此类推）；
+
+#### 线程调度
+
+- 抢占式调度：每条线程执行的时间、线程的切换都由系统控制；
+- 协同式调度：某一线程执行后主动通知系统切换到另一线程上执行；
+- JVM的线程调度的实现（抢占式调度）：Java中线程会按优先级分配CPU时间片运行，且优先级越高越优先执行；
+- 线程让出CPU的情况：1.运行线程主动让出CPU，比如调用yield()方法；2.当前运行线程阻塞，比如阻塞在IO上；3.当前线程运行结束；
