--- a/数据库.md
+++ b/数据库.md
@@ -98,6 +98,10 @@ B+树自顶向下根据逐层查找节点，最终找到匹配的叶子节点；
 
 因为B-Tree每个节点都保存数据，单次查询时间复杂度在O(1)和O(logN)之间，B+Tree只在叶子节点保存数据，查询的时间复杂度稳定在O(logN)，所以B-Tree单次查询的性能更好，更适合MongoDB这种NoSQL（单次查询即可查询出关联的Json数据）。且B+Tree叶子节点之间互相连接，所以更适合范围查询和数据遍历，所以更适合MySQL这种关系型数据库；
 
+### 前缀索引
+
+MySQL可以为列的开始的一部分字符建立索引，以这种方式做索引可以使索引文件小得多；
+
 ## 2.大库DDL怎么做比较好
 
 可以创建新表，导入旧表的数据，然后通过改名交换两张表；
@@ -220,6 +224,15 @@ relay log是复制过程中产生的日志，和binary log差不多，区别是r
 
 - 避免单点故障：可通过同步复制保证至少有一台备库具有实时的数据副本；
 - 故障转移：主备切换；
+
+## 9.MySQL查询语句执行的过程
+
+1. 首先查询缓存，如果命中则直接返回（这里缓存要求SQL语句完全一样，并且如果表中数据被修改，这张表的缓存就会失效）；
+2. 如果没有命中，则通过解析器对SQL语句进行语法解析和预处理，生成解析树；
+3. 然后通过优化器对解析树进行优化，这里主要是选择索引、查询条件优化，优化表连接顺序等（可以通过explain查看执行计划）；
+4. 最后执行器确定有执行权限后，查询存储引擎，获取数据，返回给客户端；
+
+
 
 
 
