--- a/计算机网络.md
+++ b/计算机网络.md
@@ -144,3 +144,16 @@ HTTP2.0是基于SPDY设计的，与SPDY不同的是，HTTP2.0支持明文HTTP传
 
 - TCP提供面向连接的、可靠的数据流传输，而UDP提供的是非面向连接的，不可靠的数据流传输；
 - TCP注重数据安全性，UDP数据传输快；
+
+### 为什么TCP的传输效率比UDP低
+
+- 因为TCP在传输报文前后需要建立连接和释放，这有一定的消耗；
+- TCP需要保证可靠传输，在每发送一个报文都需要接收方回复一个对应的报文，如果收不到回复，会进行重试。UDP只需要把报文发送出去，不需要关心接收方是否能收到；
+
+## TCP哪些机制可以保证可靠传输
+
+- 滑动窗口协议（略）；
+- 超时重传：TCP的发送方如果在规定时间内没有收到确认，就会重传已发送的报文段。TCP采用了一种非自适应算法来计算超时重传的时间，这个时间与报文往返时间RTT有关；
+- 数据校验：TCP请求头里有一个校验和，接收方收到包以后会重新计算校验和，如果两者不匹配则会丢弃这个；
+- 拥塞控制（略）；
+
